--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.6.5",
+    "ethers": "^5.4.6",
     "next": "^11.0.0",
-    "react": "^16.14.0"
+    "react": "^16.14.0",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
     "react-dom": "^17.0.2"
