--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.6.5",
+    "bulma": "^0.9.3",
     "ethers": "^5.4.6",
     "next": "^11.0.0",
     "react": "^16.14.0",
