--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@uiw/react-md-editor": "3.6.0",
     "@walletconnect/web3-provider": "^1.6.5",
     "bulma": "^0.9.3",
+    "decimal.js": "^10.3.1",
     "ethers": "^5.4.6",
     "next": "^11.0.0",
     "next-remove-imports": "^1.0.5",
