--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^11.0.0",
     "next-remove-imports": "^1.0.5",
     "react": "^16.14.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
