--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "web3modal": "^1.9.4"
+  },
+  "devDependencies": {
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react": "^7.26.0"
   }
 }
