--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "buffer": "^6.0.3",
     "bulma": "^0.9.3",
     "decimal.js": "^10.3.1",
+    "dotenv": "^10.0.0",
     "ethers": "^5.4.6",
     "gatsby": "^3.14.0",
     "gatsby-plugin-mdx": "^2.14.0",
