--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "https-browserify": "^1.0.0",
     "joi": "^17.4.2",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
