--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.15.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.14.3",
+    "recoil": "^0.5.2",
     "rehype-sanitize": "^5.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
