--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.15.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.0.3",
     "react-modal": "^3.14.3",
+    "react-toastify": "^8.2.0",
     "recoil": "^0.5.2",
     "rehype-sanitize": "^5.0.0",
     "stream-browserify": "^3.0.0",
