--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-loading-skeleton": "^3.0.3",
     "react-modal": "^3.14.3",
     "react-toastify": "^8.2.0",
+    "react-tooltip": "^4.2.21",
     "recoil": "^0.5.2",
     "rehype-sanitize": "^5.0.0",
     "stream-browserify": "^3.0.0",
