wallet balance + frame support

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bulma": "^0.9.3",
     "decimal.js": "^10.3.1",
     "dotenv": "^10.0.0",
+    "eth-provider": "^0.10.0",
     "ethers": "^5.5.2",
     "gatsby": "^3.14.0",
     "gatsby-plugin-mdx": "^2.14.0",
