--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "browserslist": "^4.17.0",
     "buffer": "^6.0.3",
     "bulma": "^0.9.3",
+    "crypto-browserify": "^3.12.0",
     "decimal.js": "^10.3.1",
     "dotenv": "^10.0.0",
     "eth-provider": "^0.10.0",
@@ -40,6 +41,7 @@
     "gatsby-source-filesystem": "^3.14.0",
     "https-browserify": "^1.0.0",
     "joi": "^17.4.2",
+    "net-browserify": "^0.2.4",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "query-string": "^7.0.1",
@@ -56,8 +58,10 @@
     "rehype-sanitize": "^5.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tls-browserify": "^0.2.2",
     "web3modal": "^1.9.4",
-    "ws": "^8.2.2"
+    "ws": "^8.2.2",
+    "zlib-browserify": "^0.0.3"
   },
   "devDependencies": {
     "eslint-config-react-app": "^6.0.0",
