--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@uiw/react-md-editor": "^3.9.3",
     "@walletconnect/web3-provider": "^1.6.5",
     "assert": "^2.0.0",
+    "browserify-fs": "^1.0.0",
     "browserslist": "^4.17.0",
     "buffer": "^6.0.3",
     "bulma": "^0.9.3",
