--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "start": "gatsby develop",
         "build": "gatsby build && python postbuild.py",
         "serve": "gatsby serve",
-        "clean": "gatsby clean"
+        "clean": "gatsby clean",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -41,6 +42,7 @@
         "gatsby-plugin-react-helmet": "^4.14.0",
         "gatsby-source-filesystem": "^3.14.0",
         "https-browserify": "^1.0.0",
+        "husky": "^7.0.4",
         "javascript-time-ago": "^2.3.13",
         "joi": "^17.4.2",
         "net-browserify": "^0.2.4",
