--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mdx-js/react": "^1.6.22",
     "@uiw/react-md-editor": "^3.9.3",
     "@walletconnect/web3-provider": "^1.6.5",
+    "ace-builds": "^1.4.14",
     "assert": "^2.0.0",
     "browserify-fs": "^1.0.0",
     "browserslist": "^4.17.0",
@@ -36,6 +37,7 @@
     "dotenv": "^10.0.0",
     "eth-provider": "^0.10.0",
     "ethers": "^5.5.2",
+    "file-loader": "^6.2.0",
     "gatsby": "^3.14.0",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
@@ -48,6 +50,7 @@
     "path-browserify": "^1.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.1",
+    "react-ace": "^9.5.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.15.3",
