--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-source-filesystem": "^3.14.0",
+    "htmr": "^1.0.1",
     "https-browserify": "^1.0.0",
     "javascript-time-ago": "^2.3.13",
     "joi": "^17.4.2",
@@ -57,10 +58,12 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.0.3",
     "react-modal": "^3.14.3",
+    "react-split-pane": "^0.1.92",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "recoil": "^0.5.2",
     "rehype-sanitize": "^5.0.0",
+    "sanitize-html": "^2.7.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tls-browserify": "^0.2.2",
