--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-source-filesystem": "^3.14.0",
-    "htmr": "^1.0.1",
     "https-browserify": "^1.0.0",
     "javascript-time-ago": "^2.3.13",
     "joi": "^17.4.2",
@@ -62,11 +61,15 @@
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "recoil": "^0.5.2",
+    "rehype-parse": "^8.0.4",
+    "rehype-react": "^7.0.4",
     "rehype-sanitize": "^5.0.0",
+    "rehype-stringify": "^9.0.3",
     "sanitize-html": "^2.7.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tls-browserify": "^0.2.2",
+    "unified": "^10.1.2",
     "web3modal": "^1.9.4",
     "ws": "^8.2.2",
     "zlib-browserify": "^0.0.3"
